@@ -1,3 +1,5 @@
+    * Fix crash when holding a grass slab.
+
 1.0.0-beta3:
     * Fix block breaking particles not having textures, fixes #7.
     * Fix crash when placing blocks, fixes #13.
